[package]
name = "pexels"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["derive"] }
futures = "0.3.30"
image = "0.25.2"
indicatif = "0.17.8"
mozjpeg = "0.10.10"
photon-rs = "0.3.2"
reqwest = "0.12.7"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
webp = "0.3.0"
